optimizando index tecnicas de SEO

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@
 
 .main__img {
   height: 506px;
-  background-image: url("../img/ableton_main.jpg");
+  background-image: url("../img/ableton_main.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
